platform-operator-resources/gateway-https.yml
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-https-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - protocol: HTTPS
      tls:
        certificateRef:
          group: "core"
          kind: "Secret"
          name: "mysecret"
      port: 443
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            app: traefik
